frontend/src/pages/info/InfoPage.scss
@import "../../App.scss";

.info-page {
  margin-top: auto;

  .details {
    display: flex;
    margin: 3vw;
    margin-top: 10vh;
    @include tablet {
      flex-direction: column;
    }

    img {
      height: 80vh;
    }

    .info {
      margin: 0 2vw;
      color: white;

      h1 {
        font-size: 2em;
      }

      p {
        @include tablet {
          font-size: 1.5rem;
        }
        @include mobile {
          font-size: 1rem;
        }
      }

      button {
        display: flex;
        background-color: white;
        color: black;
        border-radius: 4px;
        align-items: center;
        @include tablet {
          font-size: 1.5rem;
        }
        @include mobile {
          font-size: 1rem;
        }

        span {
          font-weight: 800;
        }
      }
    }
  }
}

